<resources>
    <string name="app_name">Where To</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="Login">Login</string>
    <string name="registry">Register</string>
    <string name="registry_frase">If not register here</string>
    <string name="submit">Submit</string>
    <string name="insert_image">Image</string>

    <string name="data">Data:</string>
    <string name="entry">Entry:</string>
    <string name="security">Security:</string>

    <string name="description">Description:</string>
    <string name="publications">Publications</string>
    <string name="change_language">Change Language</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_data">Profile Data</string>

    <string name="app_bottomtabbar_posts_title">Posts</string>
    <string name="app_bottomtabbar_publish_title">Publish</string>
    <string name="app_bottomtabbar_profile_title">Profile</string>

    <string name="user_name">António</string>
    <string name="data_example">DD:MM:YYYY</string>
    <string name="hours_example">HH:MM</string>
    <string name="entry_example">value €</string>
    <string name="email_example">a.m.v.l.ferreira@gmail.com</string>
    <string name="publications_example">1</string>
    <string name="security_example">No</string>
    <string name="description_example">Default description</string>

    <string name="location">City</string>
    <string name="word_location">Location</string>

    <string name="about_button">About</string>
    <string name="help_button">Help</string>

    <string name="capacity">Max. Capacity</string>
    <string name="delete">Delete</string>
    <string name="about_title_text">About</string>
    <string name="help_title_text">Help</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="app_developed_by">Application Developed by António Luís Ferreira</string>
    <string name="author_description">
        3rd year student from the Informatics and Multimedia Engineering Undergraduate at ISEL.
        This app was developed as the Final Project for the DAM class.</string>
    <string name="prof">Prof. Pedro Fazenda</string>
    <string name="about_date">June 2024</string>

    <string name="help_question">Whats the purpose of this application?</string>
    <string name="help_answer">This application serves as a hub for giving to know where to go on a night out.</string>
</resources>
