<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.RegisterActivity"
    android:background="@color/white"
    tools:ignore="MissingDefaultResource">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/relativeLayoutBackground"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:clipToPadding="true"
        android:gravity="center"
        android:focusable="true"
        android:orientation="vertical">



        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:ems="10"
            android:inputType="numberPassword" />


        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registry" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>