<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.longPostActivity"
    android:background="@color/white">

    <data>
        <variable
            name="short_post"
            type="dam.a47500.whereto.data.Post" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/relativeLayoutBackground"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:clipToPadding="true"
        android:focusable="true">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="560dp"
            android:layout_margin="0dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            android:padding="0dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/postBgImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@color/light_blue"
                android:foregroundTintMode="src_in"
                android:scaleType="fitXY"
                android:src="@{short_post.priority}"/>
            <!--    app:isToSetBackground="@{true}" />-->

            <!-- Vertical LinearLayout to stack elements -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- User Name -->
                <LinearLayout
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal"
                    android:focusable="true">



                    <TextView
                        android:id="@+id/textViewProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:gravity="center_vertical"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/username"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <!-- Image -->
                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    app:iss_auto_cycle="true"
                    android:layout_height="200dp"
                    android:layout_marginTop="16dp"
                    app:iss_delay="0"
                    app:iss_period="5000"
                    app:iss_selected_dot="@drawable/default_selected_dot"
                    app:iss_unselected_dot="@drawable/default_unselected_dot"
                    app:iss_title_background="@color/transparent"
                     />


                <!-- Location -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewLocation"
                        android:layout_width="37dp"
                        android:layout_height="37dp"
                        app:srcCompat="@drawable/localizacao" />

                    <TextView
                        android:id="@+id/textViewLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/location"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <!-- Capacity -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewCapacity"
                        android:layout_width="37dp"
                        android:layout_height="37dp"
                        app:srcCompat="@drawable/people" />

                    <TextView
                        android:id="@+id/textViewCapacity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/capacity"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <!-- Capacity -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewDate1"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/data"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textViewDate2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:gravity="center_vertical"
                        android:text="@string/data_example"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textViewHours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/hours_example"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <!-- Capacity -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewEntrance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/entry"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textViewEntranceValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="46dp"
                        android:gravity="center_vertical"
                        android:text="@string/entry_example"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>
                <!-- Capacity -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewSecurity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/security"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textViewSecurityValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="28dp"
                        android:gravity="center_vertical"
                        android:text="@string/security_example"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>
                <!-- Capacity -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/description"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView

                            android:id="@+id/textViewDescriprionValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:gravity="center_vertical"
                            android:text="@string/description_example"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </ScrollView>
                </LinearLayout>
                <Button
                    android:id="@+id/btnDeletePost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/delete" />
            </LinearLayout>



        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
