<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.PublishActivity"
    android:background="@color/white">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/relativeLayoutBackground"
        android:layout_width="match_parent"
        android:layout_height="590dp"
        android:clipToPadding="true"
        android:focusable="true">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            app:cardCornerRadius="20dp"
            app:cardPreventCornerOverlap="true"
            >

            <!-- Vertical LinearLayout to stack elements -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/light_gray"
                >

                <!-- User Name -->
                <LinearLayout
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal"
                    android:focusable="true">

                    <TextView
                        android:id="@+id/textViewProfile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="8dp"
                        android:gravity="center_vertical"
                        android:text="@string/username"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/buttonAddImage"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/insert_image"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/buttonSubmit"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:text="@string/submit" />
                </LinearLayout>

                <!-- Image -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">


                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    app:iss_auto_cycle="true"
                    android:layout_height="200dp"
                    android:background="@color/grey_font"
                    app:iss_delay="0"
                    app:iss_period="5000"
                    app:iss_selected_dot="@drawable/default_selected_dot"
                    app:iss_unselected_dot="@drawable/default_unselected_dot"
                    app:iss_title_background="@color/transparent"
                    >


                </com.denzcoskun.imageslider.ImageSlider>
            </LinearLayout>

                <!-- Location -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewLocation"
                        android:layout_width="37dp"
                        android:layout_height="37dp"
                        app:srcCompat="@drawable/localizacao" />

                    <EditText
                        android:id="@+id/editTextLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/location"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>

                <!-- Capacity -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewCapacity"
                        android:layout_width="37dp"
                        android:layout_height="37dp"
                        app:srcCompat="@drawable/people" />

                    <EditText
                        android:id="@+id/editTextCapacity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/capacity"
                        android:textColor="@color/black"
                        android:textSize="14sp" />


                </LinearLayout>

                <!-- Capacity -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewDate1"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:text="@string/data"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:gravity="center_vertical"
                        android:hint="@string/data_example"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:inputType="text"/>

                    <EditText
                        android:id="@+id/editTextHours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/hours_example"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:inputType="time"/>


                </LinearLayout>

                <!-- Capacity -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewEntrance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/entry"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextEntryValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="46dp"
                        android:gravity="center_vertical"
                        android:hint="@string/entry_example"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>
                <!-- Capacity -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewSecurity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/security"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="18sp" />
                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="28dp"
                        android:gravity="center_vertical"
                         />
                </LinearLayout>
                <!-- Capacity -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/description"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/editTextDescriptionValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:gravity="center_vertical"
                        android:hint="@string/description_example"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <!-- Submit Button -->


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>
